Update fuseki data loading to include enabling geosparql extension

--- a/roles/fuseki.load-initial-data/tasks/main.yml
+++ b/roles/fuseki.load-initial-data/tasks/main.yml
@@ -25,7 +25,7 @@
         chdir: /tmp/qld-resources-prez
         cmd: |
           podman build -f data-loader.Dockerfile -t data-loader .
-          podman run --rm --name data-loader --network host -e FUSEKI_URL=http://0.0.0.0:3030 -e FUSEKI_USER={{ fuseki_user }} -e FUSEKI_PASSWORD={{ fuseki_password }} -v ./data_loading/create_fuseki_dataset.py:/app/create_fuseki_dataset.py -v ./data_loading/data_loader.py:/app/data_loader.py -v ./data_loading/entrypoint.sh:/app/entrypoint.sh -v ./data_loading/enable_union_default_graph.py:/app/enable_union_default_graph.py -v /fuseki-data:/fuseki data-loader
+          podman run --rm --name data-loader --network host -e FUSEKI_URL=http://0.0.0.0:3030 -e FUSEKI_USER={{ fuseki_user }} -e FUSEKI_PASSWORD={{ fuseki_password }} -v ./data_loading/create_fuseki_dataset.py:/app/create_fuseki_dataset.py -v ./data_loading/data_loader.py:/app/data_loader.py -v ./data_loading/entrypoint.sh:/app/entrypoint.sh -v ./data_loading/enable_union_default_graph.py:/app/enable_union_default_graph.py -v ./data_loading/enable_geosparql.py:/app/enable_geosparql.py -v /fuseki-data:/fuseki data-loader
 
     - name: restart fuseki
       systemd:
