--- a/group_vars/webservers.yml
+++ b/group_vars/webservers.yml
@@ -1,10 +1,10 @@
 # letsencrypt
 letsencrypt_email: kurrawongai@gmail.com
-domain_name: gsq-prez.dev.kurrawong.ai,api.gsq-prez.dev.kurrawong.ai
+domain_name: iso.dev.kurrawong.ai,api.iso.dev.kurrawong.ai
 
 # container images
-prez_ui_image: ghcr.io/kurrawong/gsq-prez-ui:git-main-0a28ff2e
-prez_image: ghcr.io/rdflib/prez:3.0.8
+prez_ui_image: ghcr.io/rdflib/prez-ui:3.0.3
+prez_image: ghcr.io/rdflib/prez:3.0.9
 fuseki_image: ghcr.io/kurrawong/fuseki-geosparql:git-main-23a3a84d
 
 # a boolean value to control whether fuseki is accessible publicly via nginx
