--- a/group_vars/webservers.yml
+++ b/group_vars/webservers.yml
@@ -3,12 +3,16 @@ letsencrypt_email: kurrawongai@gmail.com
 domain_name: gsq-prez.dev.kurrawong.ai,api.gsq-prez.dev.kurrawong.ai
 
 # container images
-prez_ui_image: ghcr.io/kurrawong/gsq-prez-ui:git-main-c8528870
+prez_ui_image: ghcr.io/kurrawong/gsq-prez-ui:git-main-2890bbef
 prez_image: ghcr.io/rdflib/prez:3.0.9
 fuseki_image: ghcr.io/kurrawong/fuseki-geosparql:git-main-23a3a84d
 
 # a boolean value to control whether fuseki is accessible publicly via nginx
 nginx_expose_fuseki: true
+
+# prez ui settings
+enabled_prezs: SpacePrez,VocPrez
+prez_api_base_url: https://api.gsq-prez.dev.kurrawong.ai
 
 # swapfile
 swap_file_path: /swapfile
